<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/rallyAppBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/rallyAppBackground">

        <TextView
            android:id="@+id/cargo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cargo_name"
            android:textColorHint="@color/rallyDarkGreen"
            android:layout_margin="2dp"
            android:textSize="24sp"
            android:textColor="@color/rallyPrimaryGreen"
            android:background="@color/rallyContentBackground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/derival"
                    android:layout_margin="2dp"
                    android:textSize="16sp"
                    android:textColor="@color/rallyTextColorBright"
                    android:background="@color/rallyContentBackground"/>

                <TextView
                    android:id="@+id/cargo_derival_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:textColorHint="@color/rallyTextColorDark"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    android:textColor="@color/rallyTextColorBright"
                    android:background="@color/rallyContentBackground"/>

                <TextView
                    android:id="@+id/cargo_derival_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    android:textColorHint="@color/rallyTextColorDark"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    android:textColor="@color/rallyTextColorBright"
                    android:background="@color/rallyContentBackground"/>

                <TextView
                    android:id="@+id/cargo_derival_house"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house"
                    android:textColorHint="@color/rallyTextColorDark"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    android:textColor="@color/rallyTextColorBright"
                    android:background="@color/rallyContentBackground"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival"
                    android:layout_margin="2dp"
                    android:textSize="16sp"
                    android:textColor="@color/rallyOrange"
                    android:background="@color/rallyContentBackground"/>

                <TextView
                    android:id="@+id/cargo_arrival_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:textColorHint="@color/rallyOrangeDark"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    android:textColor="@color/rallyOrange"
                    android:background="@color/rallyContentBackground"/>

                <TextView
                    android:id="@+id/cargo_arrival_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    android:textColorHint="@color/rallyOrangeDark"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    android:textColor="@color/rallyOrange"
                    android:background="@color/rallyContentBackground"/>

                <TextView
                    android:id="@+id/cargo_arrival_house"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house"
                    android:textColorHint="@color/rallyOrangeDark"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    android:textColor="@color/rallyOrange"
                    android:background="@color/rallyContentBackground"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="wrap_content"
                android:text="@string/total_weight"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/rallyPrimaryGreen"
                android:background="@color/rallyContentBackground"/>

            <TextView
                android:id="@+id/cargo_total_weight"
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="wrap_content"
                android:hint="@string/kg"
                android:textColorHint="@color/rallyDarkGreen"
                android:layout_margin="2dp"
                android:textSize="12sp"
                android:textColor="@color/rallyPrimaryGreen"
                android:background="@color/rallyContentBackground"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="wrap_content"
                android:text="@string/total_volume"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/rallyPrimaryGreen"
                android:background="@color/rallyContentBackground"/>

            <TextView
                android:id="@+id/cargo_total_volume"
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="wrap_content"
                android:hint="@string/m2"
                android:textColorHint="@color/rallyDarkGreen"
                android:layout_margin="2dp"
                android:textSize="12sp"
                android:textColor="@color/rallyPrimaryGreen"
                android:background="@color/rallyContentBackground"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/rallyPrimaryGreen"
                android:background="@color/rallyContentBackground"/>

            <TextView
                android:id="@+id/cargo_total_qty"
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="wrap_content"
                android:hint="@string/qty_0"
                android:textColorHint="@color/rallyDarkGreen"
                android:layout_margin="2dp"
                android:textSize="12sp"
                android:textColor="@color/rallyPrimaryGreen"
                android:background="@color/rallyContentBackground"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>